Fixed not showing chat

--- a/docs/chat.css
+++ b/docs/chat.css
@@ -1,4 +1,4 @@
-*{
+/* *{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -13,7 +13,7 @@ body
 html
 {
 	font-family: Arial, Helvetica, sans-serif;
-	background: linear-gradient( to right, #57cbcc 0%, #246fa8 100%);
+	background: #246fa8;
 	font-size: 10px;
 
 }
@@ -22,12 +22,12 @@ body
 {
 	display: grid;
 	place-items: center;
-}
+} */
 
 
 
 
-#chat-container
+/* #chat-container
 {
 	display: grid;
 	grid:
@@ -42,7 +42,7 @@ body
 	height: 95vh;
 	border-radius: 10px;
 	background: slategrey;
-}
+} */
 
 #search-container,
 #conversation-list,
